# thanatos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent_capabilities.json  config.json  thanatos.code-workspace
Payload_Type/thanatos/agent/: .env.default  .env.ps1  .env.sh  .envvars.ps1  .gitignore  Cargo.toml  Makefile  runtests.sh
Payload_Type/thanatos/agent/.cargo/: config.toml
Payload_Type/thanatos/agent/agent/: Cargo.toml
Payload_Type/thanatos/agent/agent/src/: lib.rs  main.rs  tasker.rs
Payload_Type/thanatos/agent/agent_utils/: Cargo.toml
Payload_Type/thanatos/agent/agent_utils/src/: cmddefs.rs  errors.rs  lib.rs  msg.rs
Payload_Type/thanatos/agent/binary/: Cargo.toml
Payload_Type/thanatos/agent/binary/src/: main.rs
Payload_Type/thanatos/agent/commands/cat/: Cargo.toml  module.hcl
Payload_Type/thanatos/agent/commands/cd/: Cargo.toml  module.hcl
Payload_Type/thanatos/agent/commands/pwd/: Cargo.toml  module.hcl
Payload_Type/thanatos/agent/config/: Cargo.toml  build.rs  config.rs.tmpl
Payload_Type/thanatos/agent/config/src/: config_pb.rs  lib.rs  structs.rs
Payload_Type/thanatos/agent/config_builder/: Cargo.toml
Payload_Type/thanatos/agent/config_builder/src/: lib.rs
Payload_Type/thanatos/agent/cryptolib/: Cargo.toml
Payload_Type/thanatos/agent/cryptolib/src/: lib.rs
Payload_Type/thanatos/agent/errors/: Cargo.toml
Payload_Type/thanatos/agent/errors/src/: ffierrors.rs  lib.rs
Payload_Type/thanatos/agent/ffiwrappers/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/ffiwrappers/src/: errors.rs  lib.rs  socket.rs
Payload_Type/thanatos/agent/genconfig/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/profiles/: Cargo.toml
Payload_Type/thanatos/agent/profiles/base/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/profiles/egress/: Cargo.toml
Payload_Type/thanatos/agent/profiles/http/: Cargo.toml
Payload_Type/thanatos/agent/profiles/p2p/: Cargo.toml
Payload_Type/thanatos/agent/profiles/src/: errors.rs  lib.rs
Payload_Type/thanatos/agent/protos/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/protos/src/: lib.rs
Payload_Type/thanatos/agent/shellcode-builder/: Cargo.toml  link.ld
Payload_Type/thanatos/agent/shellcode-builder/.cargo/: config.toml
Payload_Type/thanatos/agent/shellcode-builder/links/: link-release.ld
Payload_Type/thanatos/agent/shellcode-builder/src/: lib.rs  useless.rs
Payload_Type/thanatos/agent/src/: agent.rs  config.rs  cp.rs  errors.rs  getenv.rs  getprivs.rs  lib.rs  main.rs  mv.rs  payloadvars.rs  redirect.rs  sleep.rs  tasking.rs
Payload_Type/thanatos/agent/src/agent/: checkin.rs  errors.rs  initialized.rs  mod.rs  running.rs  uninitialized.rs  workinghours.rs
Payload_Type/thanatos/agent/src/crypto/: crypto_rng.rs  errors.rs  mod.rs
Payload_Type/thanatos/agent/src/logging/: mod.rs
Payload_Type/thanatos/agent/src/ls/: ls_windows.rs  mod.rs
Payload_Type/thanatos/agent/src/native/: mod.rs
Payload_Type/thanatos/agent/src/profiles/: errors.rs  http.rs  mod.rs
Payload_Type/thanatos/agent/src/ps/: windows_ps.rs
Payload_Type/thanatos/agent/src/ssh/: download.rs  ls.rs  mod.rs  upload.rs
Payload_Type/thanatos/agent/src/utils/: consts.rs  mod.rs  windows.rs
Payload_Type/thanatos/agent/testing/configs/: config.json
Payload_Type/thanatos/agent/thanatos/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/thanatos-module/: Cargo.toml
Payload_Type/thanatos/agent/thanatos-module/src/: errors.rs  lib.rs
Payload_Type/thanatos/agent/thanatos-module/thanatos-module_macros/: Cargo.toml
Payload_Type/thanatos/agent/thanatos/binary/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/thanatos/core/: Cargo.toml
Payload_Type/thanatos/agent/thanatos/src/: guardrails.rs  lib.rs
Payload_Type/thanatos/agent/thanatos_agent/: Cargo.toml
Payload_Type/thanatos/agent/thanatos_agent/cdylib/: Cargo.toml
Payload_Type/thanatos/agent/thanatos_agent/src/: guardrails.rs  lib.rs  logging.rs
Payload_Type/thanatos/agent/thanatos_bin/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/thanatos_bin/src/: main.rs
Payload_Type/thanatos/agent/thanatos_binary/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/thanatos_binary/src/: main.rs
Payload_Type/thanatos/agent/thanatos_cdylib/: Cargo.toml
Payload_Type/thanatos/agent/thanatos_core/: Cargo.toml
Payload_Type/thanatos/agent/thanatos_http/: Cargo.toml
Payload_Type/thanatos/agent/thanatos_lib/: Cargo.toml  build.rs
Payload_Type/thanatos/agent/utils/: Cargo.toml
Payload_Type/thanatos/agent_code/: Cargo.toml
Payload_Type/thanatos/agent_code/.cargo/: config
Payload_Type/thanatos/agent_code/src/: agent.rs  main.rs  portscan.rs  upload.rs
Payload_Type/thanatos/mythic/: .env  .gitignore  Makefile  genconfig.go  go.mod  go.sum  main.go  payload_service.sh  pyproject.toml
Payload_Type/thanatos/mythic/agent_functions/: builder.py  cat.py  cd.py  cp.py  getenv.py  getprivs.py  jobs.py  ls.py  mkdir.py  mv.py  portscan.py  redirect.py  rm.py  setenv.py  shell.py  sleep.py  sshspawn.py  unsetenv.py  workinghours.py
Payload_Type/thanatos/mythic/browser_scripts/: ls.js
Payload_Type/thanatos/mythic/browserscript/: ls.js
Payload_Type/thanatos/mythic/browserscripts/: download.ts  getenv.ts  ls.ts  ps.js  ps.ts  ssh.js  tsconfig.json
Payload_Type/thanatos/mythic/builder/: build.go.old  buildcommand.go  builder.go  builder_test.go  buildparameters.go  buildparameters_parser.go  config.go  handlers.go  http_parser.go  httpparameters.go  httpparameters_parser.go  parameters.go  payloadparameters.go  testing.go  testing_types.go  types.go  workinghours.go  workinghours_parser.go
Payload_Type/thanatos/mythic/cmd/: cmd.mk
Payload_Type/thanatos/mythic/commands/: commands.go
Payload_Type/thanatos/mythic/errors/: errors.go
Payload_Type/thanatos/mythic/pkg/: proto.mk
Payload_Type/thanatos/mythic/protobuf/: sources.mk
Payload_Type/thanatos/mythic/protos/: checkin.proto  config.proto
Payload_Type/thanatos/mythic/thanatos/: builder.py  main.py
Payload_Type/thanatos/thanatos/agent_code/: .env.default  .env.windows  .gitignore  Cargo.toml
(+557 files in other folders)
