##### WORKSPACE DEFINITION #####
[workspace]
resolver = "2"
members = [
  "errors",
  "ffiwrappers",
  "thanatos",
  "thanatos_binary",
  "thanatos_cdylib",
  "utils",
  "profiles/http",
  "protos", "genconfig",
]

default-members = ["thanatos"]

[workspace.package]
authors = ["@M_alphaaa"]
edition = "2021"
homepage = "https://github.com/MythicAgents/thanatos"
license = "BSD-3-Clause"
version = "0.2.0"


##### WORKSPACE DEPENDENCIES #####
[workspace.dependencies]
base64 = "0.22.0"
bindgen = "0.69.4"
bitflags = "2.4"
cfg-if = "1"
chrono = "0.4.34"
generic-array = "1"
hex-literal = "0.4.1"
openssl = "0.10.63"
prost = "0.12.6"
prost-types = "0.12.6"
prost-build = "0.12.6"
serde_json = "1"
sha2 = "0.10.8"

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.rand]
version = "0.8.5"
default-features = false
features = ["std_rng", "small_rng", "getrandom"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_WindowsProgramming",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_Security_Cryptography",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Wdk",
  "Wdk_System",
  "Wdk_System_SystemServices",
  "Wdk_System_SystemInformation",
]

##### WORKSPACE SETTINGS #####

##### BUILD SETTINGS #####
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 'z'
