[package]
name = "config"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[features]

[dependencies]
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_bytes.workspace = true

[dependencies.utils]
path = "../utils"
