[package]
name = "config"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
quick-protobuf.workspace = true
cfg-if.workspace = true

[dependencies.errors]
path = "../errors"

[dependencies.utils]
path = "../utils"

[build-dependencies]
pb-rs.workspace = true

[features]
default = ["full"]
full = []
