[package]
name = "cryptolib"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dev-dependencies]
hex-literal.workspace = true

[target.'cfg(target_os = "linux")'.dependencies.openssl]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies.ffiwrappers]
path = "../ffiwrappers"
