[package]
name = "ffiwrappers"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
bitflags.workspace = true
generic-array = "1"
hex-literal.workspace = true
windows.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
