[package]
name = "genconfig"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[build-dependencies]
base64.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
utils = { path = "../utils" }
sha2.workspace = true
