[package]
name = "genconfig"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
base64.workspace = true
chrono.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[build-dependencies.utils]
path = "../utils"

[build-dependencies.config]
path = "../config"
default-features = false
