[package]
name = "shellcode-builder"
version = "0.2.0"
authors = ["@M_alphaaa"]
edition = "2021"
homepage = "https://github.com/MythicAgents/thanatos"
license = "BSD-3-Clause"

[lib]
name = "shellcode"
crate-type = ["cdylib"]

[dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 'z'

[profile.dev]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 'z'
