[package]
name = "thanatos"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
cfg-if.workspace = true
chrono.workspace = true
hex-literal.workspace = true
prost.workspace = true
rand.workspace = true

[dependencies.cryptolib]
path = "../cryptolib"

[dependencies.errors]
path = "../errors"

[dependencies.ffiwrappers]
path = "../ffiwrappers"

[dependencies.utils]
path = "../utils"

[dependencies.http-profile]
path = "../profiles/http"

[dependencies.thanatos_protos]
path = "../protos"
