[package]
name = "thanatos"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
chrono.workspace = true
prost.workspace = true
rand.workspace = true

[dependencies.cryptolib]
path = "../cryptolib"

[dependencies.errors]
path = "../errors"

[dependencies.ffiwrappers]
path = "../ffiwrappers"

[dependencies.utils]
path = "../utils"

[dependencies.http-profile]
path = "../profiles/http"

[dependencies.thanatos_protos]
path = "../protos"

[dev-dependencies]
hex-literal.workspace = true
