[package]
name = "thanatos"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
cfg-if.workspace = true
hex-literal.workspace = true

[dependencies.config]
path = "../config"

[dependencies.cryptolib]
path = "../cryptolib"
optional = true

[dependencies.errors]
path = "../errors"

[dependencies.ffiwrappers]
path = "../ffiwrappers"

[dependencies.utils]
path = "../utils"

[features]
default = ["crypto-internal"]
crypto-system = ["cryptolib/system"]
crypto-internal = ["cryptolib/internal"]
domaincheck = []
hostnamecheck = []
usernamecheck = []
init-fork = []
init-thread = []
tlsuntrusted = []
http = []
tcp = []
