[package]
name = "thanatos_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
base64.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sha2.workspace = true

[dependencies.config]
path = "../config"

[dependencies.utils]
path = "../utils"
