[package]
name = "thanatos_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
base64.workspace = true
cfg-if.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sha2.workspace = true
hex-literal.workspace = true


[dependencies.config]
path = "../config"

[dependencies.cryptolib]
path = "../cryptolib"

[dependencies.errors]
path = "../errors"

[dependencies.ffiwrappers]
path = "../ffiwrappers"

[dependencies.utils]
path = "../utils"

[target.'cfg(target_os = "linux")'.dependencies]
dbus.workspace = true

[features]
crypto-system = ["cryptolib/system"]
