[package]
name = "thanatos_http"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rmp.workspace = true
rmp-serde.workspace = true

[dependencies.config]
path = "../config"

[dependencies.thanatos_core]
path = "../thanatos_core"
