[package]
name = "thanatos"
version = "0.1.7"
authors = ["Matt Ehrnschwender", "Max Harley"]
edition = "2021"


[lib]
name = "thanatos"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[[bin]]
name = "thanatos"
path = "src/main.rs"

[profile.release]
strip = "symbols"

[dependencies]
aes = "0.7.5"
base64 = "0.13"
block-modes = "0.8.1"
cfg-if = "1.0"
chrono = "0.4"
ctor = "0.1.21"
hmac = "0.11"
path-clean = "0.1.0"
rand = "0.8"
serde_json = "1.0"
sha2 = "0.9.8"

[dependencies.minreq]
version = "2.4.2"
features = ["https-rustls-probe"]

[dependencies.openssl]
version = "0.10.45"
features = ["vendored"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ssh2]
version = "0.9.3"
features = ["vendored-openssl"]

[dependencies.tokio]
version = "1.16.1"
features = ["net", "rt-multi-thread", "io-util", "macros", "process"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-acl = "0.1.0"
wmi = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [
  "aclapi",
  "errhandlingapi",
  "impl-default",
  "securitybaseapi",
  "tlhelp32",
  "winbase",
  "wincon",
  "wow64apiset",
  "sysinfoapi"
]
