[package]
name = "thanatos"
version = "0.1.9"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"


[lib]
name = "thanatos"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[[bin]]
name = "thanatos"
path = "src/main.rs"

[profile.release]
strip = "symbols"

[features]
http = []

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
cfg-if = "1.0"
chrono = "0.4"
hmac = "0.11"
rand = "0.8"
serde_json = "1.0"
sha2 = "0.9.8"

[dependencies.minreq]
version = "2.4.2"
features = ["https-rustls-probe"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ssh2]
version = "0.9"

[dependencies.tokio]
version = "1.16.1"
features = ["net", "rt-multi-thread", "io-util", "macros", "process"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
openssl = "0.10.45"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_System_Console",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
]
