[package]
name = "thanatos"
version = "0.1.9"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"


[lib]
name = "thanatos"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[[bin]]
name = "thanatos"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 'z'

[features]
http = []

[dependencies]
cfg-if = "1.0"
chrono = "0.4"
rand = "0.8"
serde_json = "1.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ssh2]
version = "0.9"
git = "https://github.com/alexcrichton/ssh2-rs"
rev = "ec94100b4a1c1730bfb30c3a1c88af3ea54fdd78"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
openssl = "0.10.45"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Networking_WinHttp",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_System_Console",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
