[package]
name = "thanatos_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
chrono.workspace = true
crossbeam-channel = "0.5.13"
prost.workspace = true
rand.workspace = true

[dependencies.cryptolib]
path = "../../cryptolib"

[dependencies.ffiwrappers]
path = "../../ffiwrappers"

[dependencies.http_profile]
path = "../../profiles/http"

[dependencies.thanatos_protos]
path = "../../protos"

[dev-dependencies]
hex-literal.workspace = true
