[package]
name = "thanatos_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
chrono.workspace = true
crossbeam-channel = "0.5.13"
rand.workspace = true
prost.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
openssl.workspace = true

[dependencies.ffiwrappers]
path = "../../ffiwrappers"

[dependencies.http_profile]
path = "../../profiles/http"

[dependencies.thanatos_protos]
path = "../../protos"

[dev-dependencies]
hex-literal.workspace = true
